Basic about me section added

--- a/index.html
+++ b/index.html
@@ -20,15 +20,57 @@
             </div>
         </div>
     </header>
-    
-</body>
-    <div class="container-fluid">
+    <section>
+        <div class="container-fluid">
         <div class="row">
             <div class="jobtitle">
                 <h2>Junior Web Developer & Digital Marketer</h2>
             </div>
         </div>
     </div>
+    </section>
+    <section>
+        <div class="container-fluid">
+            <div class="row justify-content-center">
+                <div class="aboutme">
+                    <h2>About Me</h2>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div classs="row">
+                <div class="picture col-6">
+                    <img src="assets/images/rochelle-picture.jpg" alt="Picture of Rochelle"/>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="qualifications col-6">
+                    <h3>Qualifications</h3>
+                    <br>
+                    <div>
+                       <ul>
+                            <li>BSc(Hons) Psychology</li>
+                            <li>Digital Marketing traineeship</li>
+                                <ul>
+                                    <li>SEO for Business Cerification</li>
+                                    <li>Digital Marketing Certificaiton</li>
+                                    <li>Google Analytics Certification</li>
+                                    <li>Social Media Certification</li>
+                                </ul>
+                            <li>Level 7 Diploma in Full Stack Web Development</li>
+                        </ul> 
+                    </div>
+                    <br>
+                    <button>More Details...</button>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section></section>
+    <section></section>
+</body>
 <footer>
     <div class="container-fluid">
         <div class="row">
@@ -36,7 +78,7 @@
                  <a href="www.linkedin.com/in/rochelle-campbell-7b493b107"><img src="assets/images/linkedin-logo.png" alt="linkedIn Logo"/></a>
             </div>
             <div class="download col-6">
-                <a href="assets/images/Rochelle Campbell.CV.docx " download>Click Here to Download My CV</a>
+                <a href="assets/images/CV.docx " download>Click Here to Download My CV</a>
             </div>
         </div>
     </div>
