Basic key skills section added

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
         </div>
     </header>
-    <section>
+    <section id="jobtitle">
         <div class="container-fluid">
         <div class="row">
             <div class="jobtitle">
@@ -29,7 +29,7 @@
         </div>
     </div>
     </section>
-    <section>
+    <section id="aboutMe">
         <div class="container-fluid">
             <div class="row justify-content-center">
                 <div class="aboutme">
@@ -68,8 +68,47 @@
             </div>
         </div>
     </section>
-    <section></section>
-    <section></section>
+    <section id="keyskills">
+        <div class="container">
+            <div class="row">
+                <h2>Key Skills:</h2>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="html col-4">
+                    <h3>HTML5</h3>
+                    <img src="assets/images/html.jpg" alt="HTML 5 Image"/>
+                </div>
+                <div class="css col-4">
+                    <h3>CSS3/Bootstrap</h3>
+                    <img src="assets/images/css.png" alt="CSS 3 Image"/>
+                </div>
+                <div class="javascript col-4">
+                    <h3>Javascript</h3>
+                    <img src="assets/images/javascript.png" alt="Javascript Image"/>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="seo col-4">
+                    <h3>SEO</h3>
+                    <img src="assets/images/seo.webp" alt="SEO image"/>
+                </div>
+                <div class="social-media col-4">
+                    <h3>Social Media Marketing Skills</h3>
+                    <img src="assets/images/social.jpg" alt="Social Media Marketing Image"/>
+                </div>
+                <div class="analytics col-4">
+                    <h3>Google Analytics</h3>
+                    <img src="assets/images/analytics.png" alt="Google Analytics Image"/>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="projects"></section>
+    <section id="contact"></section>
 </body>
 <footer>
     <div class="container-fluid">
