Basic projects section

--- a/index.html
+++ b/index.html
@@ -107,7 +107,25 @@
             </div>
         </div>
     </section>
-    <section id="projects"></section>
+    <section id="projects">
+        <div class="container">
+            <div class="row">
+                <h2>Projects:</h2>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="project1 col-6">
+                    <h3>Upcoming Project 1</h3>
+                    <img src="assets/images/comingsoon.jpg" alt= "Project Coming Soon"/>
+                </div>
+                <div class="project2 col-6">
+                    <h3>Upcoming Project 2</h3>
+                    <img src="assets/images/comingsoon.jpg" alt= "Project Coming Soon"/>
+                </div>
+            </div>
+        </div>
+    </section>
     <section id="contact"></section>
 </body>
 <footer>
