Basic outline of all sections

--- a/index.html
+++ b/index.html
@@ -126,16 +126,60 @@
             </div>
         </div>
     </section>
+    <section id="workwith">
+        <div class="container">
+            <div class="row">
+                <div>
+                    <h2>Work With Me!</h2>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div>
+                    <form>
+                        <div class="name">
+                            <label for="#name">Full Name</label>
+                            <input type="text" id="name" required>
+                        </div>
+                        <div>
+                            <label for="#business">Business Name</label>
+                            <input type="text" id="business" optional>
+                        </div>
+                        <div class="email">
+                            <label for="#email">Email Address</label>
+                            <input type="email" id="email" required>
+                        </div>
+                        <div class="number">
+                            <label for="#number">Contact Number</label>
+                            <input type="text" id="number" required>
+                        </div>
+                        <div class="description">
+                            <label for="#description">Project Description</label>
+                            <input type="text" id="description" required>
+                        </div>
+                        <br>
+                        <button>Submit Request</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
     <section id="contact"></section>
 </body>
 <footer>
     <div class="container-fluid">
         <div class="row">
-            <div class="linkedIn col-6">
+            <div class="linkedIn col-4">
                  <a href="www.linkedin.com/in/rochelle-campbell-7b493b107"><img src="assets/images/linkedin-logo.png" alt="linkedIn Logo"/></a>
             </div>
-            <div class="download col-6">
+            <div class="download col-4">
                 <a href="assets/images/CV.docx " download>Click Here to Download My CV</a>
+            </div>
+            <div class="contactDetails col-4">
+                <p><strong>Email Address:</strong>  rochelle.campbell8@outlook.com</p>
+                <p><strong>Contact Number:</strong> 07437067786</p>
+                <p>London, UK</p>
             </div>
         </div>
     </div>
